--- a/page2.html
+++ b/page2.html
@@ -789,7 +789,7 @@ NEW
 </table>
 <nav class="personal-hiscores__pagination">
 <a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://mattzars.github.io/BapHeads/" title="Scroll up table">
-<img alt="Scroll Up" src="https://www.runescape.com/img/rsp777/hiscores/arrow_up.gif">
+<img alt="Scroll Up" src="img/rsp777/hiscores/arrow_up.gif">
 </a>
 </nav>
 </div>
