--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Hiscores
 <a href="https://collectionlog.net/log/Nam/All%20Pets">Nam</a>
 </td>
 <td class="center">
-865/1527</td>
+867/1527</td>
 <td class="center">
 +2</td>
 <td class="center-right">
@@ -433,9 +433,9 @@ Hiscores
 <a href="https://collectionlog.net/log/Maccaroni/All%20Pets">Maccaroni</a>
 </td>
 <td class="center">
-831/1521</td>
+833/1521</td>
 <td class="center">
-+0
++2
 </td>
 <td class="center-right">
 21</td>
@@ -447,10 +447,10 @@ Hiscores
 <td class="center">
 <a href="https://collectionlog.net/log/Kurum/All%20Pets">Kurum</a>
 </td>
-<td class="center">800/1527
+<td class="center">812/1527
 </td>
 <td class="center">
-+1
++12
 </td>
 <td class="center-right">
 16</td>
@@ -462,10 +462,10 @@ Hiscores
 <td class="center">
 <a href="https://collectionlog.net/log/The%200verman/All%20Pets">The 0verman</a>
 </td>
-<td class="center">740/1527
+<td class="center">749/1527
 </td>
 <td class="center">
-+0
++9
 </td>
 <td class="center-right">
 2</td>
@@ -477,10 +477,10 @@ Hiscores
 <td class="center">
 <a href="https://collectionlog.net/log/Wraggy/All%20Pets">Wraggy</a>
 </td>
-<td class="center">698/1527
+<td class="center">705/1527
 </td>
 <td class="center">
-+5
++7
 </td>
 <td class="center-right">
 11</td>
@@ -488,6 +488,21 @@ Hiscores
 <tr class="personal-hiscores__row">
 <td class="center">
 6
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/Saint%20Drogo/All%20Pets">Saint Drogo</a>
+</td>
+<td class="center">661/1527
+</td>
+<td class="center">
++9
+</td>
+<td class="center-right">
+13</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+7
 </td>
 <td class="center">
 <a href="https://collectionlog.net/log/Cody%20M/All%20Pets">Cody M</a>
@@ -498,64 +513,49 @@ Hiscores
 +0
 </td>
 <td class="center-right">
-10</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-7
-</td>
-<td class="center">
-<a href="https://collectionlog.net/log/Saint%20Drogo/All%20Pets">Saint Drogo</a>
-</td>
-<td class="center">652/1527
-</td>
-<td class="center">
-+3
-</td>
-<td class="center-right">
-12</td>
+11</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 8
 </td>
 <td class="center">
-<a href="hiscorepersonal945d.html?user1=DedWilson">I M Maarten</a>
+<a href="https://collectionlog.net/log/Zars/All%20Pets">Zars</a>
 </td>
-<td class="center">646/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-13</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-9
+<td class="center">650/1527
 </td>
 <td class="center">
-<a href="hiscorepersonal3a1d.html?user1=GodTormentor">Zars</a>
-</td>
-<td class="center">645/1527
-</td>
-<td class="center">
-+10
++5
 </td>
 <td class="center-right">
 7</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
+9
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/I%20M%20Maarten/All%20Pets">I M Maarten</a>
+</td>
+<td class="center">647/1527
+</td>
+<td class="center">
++1
+</td>
+<td class="center-right">
+12</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
 10 
 </td>
 <td class="center">
-<a href="hiscorepersonalc9c2.html?user1=Vinny">Iron Liche</a>
+<a href="https://collectionlog.net/log/Iron%20Liche/All%20Pets">Iron Liche</a>
 </td>
-<td class="center">618/1527
+<td class="center">620/1527
 </td>
 <td class="center">
-+0
++2
 </td>
 <td class="center-right">
 10</td>
@@ -565,24 +565,24 @@ Hiscores
 11
 </td>
 <td class="center">
-<a href="hiscorepersonalbfc7.html?user1=borsi">Sir Iron 4 U</a>
+<a href="https://collectionlog.net/log/Sir%20Iron%204%20U/All%20Pets">Sir Iron 4 U</a>
 </td>
-<td class="center">611/1527
+<td class="center">614/1527
 </td>
 <td class="center">
-+5
++3
 </td>
 <td class="center-right">
-9</td>
+10</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 12
 </td>
 <td class="center">
-<a href="hiscorepersonal8eb7.html?user1=Brundeen">50 Traits</a>
+<a href="https://collectionlog.net/log/50%20Traits/All%20Pets">50 Traits</a>
 </td>
-<td class="center">591/1527
+<td class="center">592/1527
 </td>
 <td class="center">
 +1
@@ -595,67 +595,96 @@ Hiscores
 13
 </td>
 <td class="center">
-<a href="hiscorepersonalaa47.html?user1=Aziz">Kep</a>
+<a href="https://collectionlog.net/log/Pr3y/All%20Pets">Pr3y</a>
 </td>
-<td class="center">583/1527
-</td>
-<td class="center">
-+2
-</td>
-<td class="center-right">
-3</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-14
+<td class="center">587/1527
 </td>
 <td class="center">
-<a href="hiscorepersonale1fa.html?user1=Eeli">Pr3y</a>
-</td>
-<td class="center">575/1527
-</td>
-<td class="center">
-+4
++12
 </td>
 <td class="center-right">
 11</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-15
+14
 </td>
 <td class="center">
-<a href="hiscorepersonal8180.html?user1=baile%a0y">Avusten</a>
+<a href="https://collectionlog.net/log/Kep/All%20Pets">Kep</a>
 </td>
-<td class="center">523/1527
+<td class="center">583/1527
 </td>
 <td class="center">
 +0
+</td>
+<td class="center-right">
+3</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+15
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/Drillbears/All%20Pets">Drillbears</a>
+</td>
+<td class="center">533/1527
+</td>
+<td class="center">
+NEW
+</td>
+<td class="center-right">
+5</td>
+</tr>
+<td class="center">
+16
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/Avusten/All%20Pets">Avusten</a>
+</td>
+<td class="center">525/1527
+</td>
+<td class="center">
++2
 </td>
 <td class="center-right">
 9</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-16
+17
 </td>
 <td class="center">
-<a href="hiscorepersonal9a4c.html?user1=Dumbfounded">Torima</a>
+<a href="https://collectionlog.net/log/Torima/All%20Pets">Torima</a>
 </td>
 <td class="center">490/1527
 </td>
 <td class="center">
-+5
++0
 </td>
 <td class="center-right">
 8</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-17
+18
 </td>
 <td class="center">
-<a href="hiscorepersonaldfb6.html?user1=Dan%a0Gleesac">AlwaysSunny</a>
+<a href="https://collectionlog.net/log/AlwaysSunny/All%20Pets">AlwaysSunny</a>
+</td>
+<td class="center">476/1527
+</td>
+<td class="center">
++3
+</td>
+<td class="center-right">
+0</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+19
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/H5rion/All%20Pets">H5rion</a>
 </td>
 <td class="center">473/1527
 </td>
@@ -663,79 +692,49 @@ Hiscores
 +2
 </td>
 <td class="center-right">
-0</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-18
-</td>
-<td class="center">
-<a href="hiscorepersonal0468.html?user1=blind%a0idiot">H5rion</a>
-</td>
-<td class="center">471/1527
-</td>
-<td class="center">
-+1
-</td>
-<td class="center-right">
 7</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-19
-</td>
-<td class="center">
-<a href="hiscorepersonal5e58.html?user1=he%20box%20jonge">mini kalc</a>
-</td>
-<td class="center">466/1527
-</td>
-<td class="center">
-+3
-</td>
-<td class="center-right">
-5</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 20
 </td>
 <td class="center">
-<a href="hiscorepersonal1e17.html?user1=Gustav">chapsorscyth</a>
+<a href="https://collectionlog.net/log/mini%20kalc/All%20Pets">mini kalc</a>
 </td>
-<td class="center">457/1527
+<td class="center">466/1527
 </td>
 <td class="center">
-+1
++0
 </td>
 <td class="center-right">
-4</td>
+5</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 21
 </td>
 <td class="center">
-<a href="hiscorepersonal91b4.html?user1=Hiddy">R J G</a>
+<a href="https://collectionlog.net/log/Tashikan/All%20Pets">Tashikan</a>
 </td>
-<td class="center">446/1527
+<td class="center">461/1527
 </td>
 <td class="center">
-+59
++25
 </td>
 <td class="center-right">
-2</td>
+1</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 22
 </td>
 <td class="center">
-<a href="hiscorepersonal91b4.html?user1=Hiddy">Cubecrawler</a>
+<a href="https://collectionlog.net/log/hornplzzzzzz/All%20Pets">hornplzzzzzz</a>
 </td>
-<td class="center">440/1527
+<td class="center">457/1527
 </td>
 <td class="center">
-NEW
++0
 </td>
 <td class="center-right">
 5</td>
@@ -745,9 +744,24 @@ NEW
 23
 </td>
 <td class="center">
-<a href="hiscorepersonaldf47.html?user1=Randalicious">Podiacus</a>
+<a href="https://collectionlog.net/log/R%20J%20G/All%20Pets">R J G</a>
 </td>
-<td class="center">433/1527
+<td class="center">447/1527
+</td>
+<td class="center">
++1
+</td>
+<td class="center-right">
+2</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+24
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/Cubecrawler/All%20Pets">Cubecrawler</a>
+</td>
+<td class="center">440/1527
 </td>
 <td class="center">
 +0
@@ -757,33 +771,18 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-24
-</td>
-<td class="center">
-<a href="hiscorepersonal9a37.html?user1=Killzone">Tashikan</a>
-</td>
-<td class="center">431/1527
-</td>
-<td class="center">
-+14
-</td>
-<td class="center-right">
-1</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
 25
 </td>
 <td class="center">
-<a href="hiscorepersonal91b4.html?user1=Hiddy">PipPipDiddly</a>
+<a href="https://collectionlog.net/log/Podiacus/All%20Pets">Podiacus</a>
 </td>
-<td class="center">442/1527
+<td class="center">433/1527
 </td>
 <td class="center">
-+3
++0
 </td>
 <td class="center-right">
-7</td>
+5</td>
 </tr>
 </tbody>
 </table>
