--- a/page2.html
+++ b/page2.html
@@ -416,24 +416,69 @@ Hiscores
 26
 </td>
 <td class="center">
-<a href="hiscorepersonal0d0a.html?user1=Lynx%a0Titan">GIM Retro S</a>
+<a href="https://collectionlog.net/log/PipPipDiddly/All%20Pets">PipPipDiddly</a>
+</td>
+<td class="center">442/1527
 </td>
 <td class="center">
-420/1527</td>
-<td class="center">
-NEW</td>
++3
+</td>
 <td class="center-right">
-8</td>
+7</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 27
 </td>
 <td class="center">
-<a href="hiscorepersonal33d8.html?user1=Hey%a0Jase">Iron Hatred</a>
+<a href="hiscorepersonal0d0a.html?user1=Lynx%a0Titan">GIM Retro S</a>
 </td>
 <td class="center">
-406/1521</td>
+420/1527</td>
+<td class="center">
++0</td>
+<td class="center-right">
+8</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+28
+</td>
+<td class="center">
+<a href="https://collectionlog.net/log/PipPipDiddly/All%20Pets">Iron Speesh</a>
+</td>
+<td class="center">418/1527
+</td>
+<td class="center">
+NEW
+</td>
+<td class="center-right">
+6</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+29
+</td>
+<td class="center">
+<a href="hiscorepersonale8ec.html?user1=senZe">RogueLegends</a>
+</td>
+<td class="center">
+407/1521</td>
+<td class="center">
++26
+</td>
+<td class="center-right">
+0</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+30
+</td>
+<td class="center">
+<a href="hiscorepersonal33d8.html?user1=Hey%a0Jase">Iron Hatred</a>
+</td>
+<td class="center">406/1527
+</td>
 <td class="center">
 +0
 </td>
@@ -442,7 +487,7 @@ NEW</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-28
+31
 </td>
 <td class="center">
 <a href="hiscorepersonalf6ce.html?user1=ShawnBay">skadyyyy</a>
@@ -457,22 +502,7 @@ NEW</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-29
-</td>
-<td class="center">
-<a href="hiscorepersonale8ec.html?user1=senZe">RogueLegends</a>
-</td>
-<td class="center">381/1527
-</td>
-<td class="center">
-NEW
-</td>
-<td class="center-right">
-9</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-30
+32
 </td>
 <td class="center">
 <a href="hiscorepersonalce24.html?user1=Tomdabom">Pi Guy</a>
@@ -487,22 +517,37 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-31
+33
 </td>
 <td class="center">
 <a href="hiscorepersonal9eda.html?user1=Karma">Mastiga</a>
 </td>
-<td class="center">371/1527
+<td class="center">375/1527
 </td>
 <td class="center">
-+5
++4
 </td>
 <td class="center-right">
 4</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-32
+34
+</td>
+<td class="center">
+<a href="hiscorepersonal945d.html?user1=DedWilson">whitefang465</a>
+</td>
+<td class="center">372/1527
+</td>
+<td class="center">
++6
+</td>
+<td class="center-right">
+5</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+35
 </td>
 <td class="center">
 <a href="hiscorepersonal208c.html?user1=harmony">CG IS TRASH</a>
@@ -517,72 +562,27 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-33
-</td>
-<td class="center">
-<a href="hiscorepersonal945d.html?user1=DedWilson">whitefang465</a>
-</td>
-<td class="center">366/1527
-</td>
-<td class="center">
-+5
-</td>
-<td class="center-right">
-5</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-34
+36
 </td>
 <td class="center">
 <a href="hiscorepersonal3a1d.html?user1=GodTormentor">Tarded Donk</a>
 </td>
-<td class="center">348/1527
+<td class="center">349/1527
 </td>
 <td class="center">
-+2
++1
 </td>
 <td class="center-right">
 4</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-35
+37
 </td>
 <td class="center">
 <a href="hiscorepersonalc9c2.html?user1=Vinny">Preau</a>
 </td>
-<td class="center">328/1527
-</td>
-<td class="center">
-+2
-</td>
-<td class="center-right">
-1</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-36
-</td>
-<td class="center">
-<a href="hiscorepersonalbfc7.html?user1=borsi">IM Silo</a>
-</td>
-<td class="center">327/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-0</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-37
-</td>
-<td class="center">
-<a href="hiscorepersonal8eb7.html?user1=Brundeen">IronFiddler</a>
-</td>
-<td class="center">319/1527
+<td class="center">333/1527
 </td>
 <td class="center">
 +5
@@ -595,12 +595,12 @@ NEW
 38
 </td>
 <td class="center">
-<a href="hiscorepersonalaa47.html?user1=Aziz">Whipyyy</a>
+<a href="hiscorepersonalbfc7.html?user1=borsi">IM Silo</a>
 </td>
-<td class="center">312/1527
+<td class="center">328/1527
 </td>
 <td class="center">
-NEW
++1
 </td>
 <td class="center-right">
 0</td>
@@ -610,19 +610,94 @@ NEW
 39
 </td>
 <td class="center">
-<a href="hiscorepersonale1fa.html?user1=Eeli">Im Furyous</a>
+<a href="hiscorepersonalaa47.html?user1=Aziz">Whipyyy</a>
 </td>
-<td class="center">303/1527
+<td class="center">327/1527
 </td>
 <td class="center">
-NEW
++15
+</td>
+<td class="center-right">
+5</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+40
+</td>
+<td class="center">
+<a href="hiscorepersonal8eb7.html?user1=Brundeen">IronFiddler</a>
+</td>
+<td class="center">323/1527
+</td>
+<td class="center">
++4
 </td>
 <td class="center-right">
 1</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-40
+41
+</td>
+<td class="center">
+<a>Pet Rex Flex</a>
+</td>
+<td class="center">320/1527
+</td>
+<td class="center">
+NEW
+</td>
+<td class="center-right">
+5</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+42
+</td>
+<td class="center">
+<a>Jorkin it</a>
+</td>
+<td class="center">307/1527
+</td>
+<td class="center">
+NEW
+</td>
+<td class="center-right">
+5</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+43
+</td>
+<td class="center">
+<a href="hiscorepersonale1fa.html?user1=Eeli">Im Furyous</a>
+</td>
+<td class="center">305/1527
+</td>
+<td class="center">
++2
+</td>
+<td class="center-right">
+1</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+44
+</td>
+<td class="center">
+<a>I m Aerith</a>
+</td>
+<td class="center">304/1527
+</td>
+<td class="center">
+NEW
+</td>
+<td class="center-right">
+3</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+45
 </td>
 <td class="center">
 <a href="hiscorepersonal8180.html?user1=baile%a0y">NotArnr</a>
@@ -637,7 +712,22 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-41
+46
+</td>
+<td class="center">
+<a href="hiscorepersonal91b4.html?user1=Hiddy">V1dd</a>
+</td>
+<td class="center">301/1527
+</td>
+<td class="center">
++14
+</td>
+<td class="center-right">
+1</td>
+</tr>
+<tr class="personal-hiscores__row">
+<td class="center">
+47
 </td>
 <td class="center">
 <a href="hiscorepersonal0468.html?user1=blind%a0idiot">Vngdx</a>
@@ -652,7 +742,7 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-42
+48
 </td>
 <td class="center">
 <a href="hiscorepersonal9a4c.html?user1=Dumbfounded">kerry catona</a>
@@ -667,123 +757,33 @@ NEW
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
-43
-</td>
-<td class="center">
-<a href="hiscorepersonal91b4.html?user1=Hiddy">V1dd</a>
-</td>
-<td class="center">287/1527
-</td>
-<td class="center">
-+19
-</td>
-<td class="center-right">
-1</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-44
+49
 </td>
 <td class="center">
 <a href="hiscorepersonal5e58.html?user1=he%20box%20jonge">I M Cloud</a>
 </td>
-<td class="center">282/1527
+<td class="center">284/1527
 </td>
 <td class="center">
-NEW
++2
 </td>
 <td class="center-right">
 1</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-45
-</td>
-<td class="center">
-<a href="hiscorepersonaldfb6.html?user1=Dan%a0Gleesac">70O0</a>
-</td>
-<td class="center">280/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-0</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-46
-</td>
-<td class="center">
-<a href="hiscorepersonal1e17.html?user1=Gustav">SSrilin</a>
-</td>
-<td class="center">260/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-1</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-47
-</td>
-<td class="center">
-<a href="hiscorepersonal9291.html?user1=moksi">GIMudkip</a>
-</td>
-<td class="center">259/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-0</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-48
-</td>
-<td class="center">
-<a href="hiscorepersonaldf47.html?user1=Randalicious">4t 0z</a>
-</td>
-<td class="center">254/1527
-</td>
-<td class="center">
-+0
-</td>
-<td class="center-right">
-0</td>
-</tr>
-<tr class="personal-hiscores__row">
-<td class="center">
-49
-</td>
-<td class="center">
-<a href="hiscorepersonal9a37.html?user1=Killzone">SkratchGyatt</a>
-</td>
-<td class="center">242/1527
-</td>
-<td class="center">
-NEW
-</td>
-<td class="center-right">
-0</td>
 </tr>
 <tr class="personal-hiscores__row">
 <td class="center">
 50
 </td>
 <td class="center">
-<a href="hiscorepersonal1788.html?user1=Kudos">Istralore</a>
+<a href="hiscorepersonaldfb6.html?user1=Dan%a0Gleesac">kciem</a>
 </td>
-<td class="center">210/1527
+<td class="center">281/1527
 </td>
 <td class="center">
-+0
+NEW
 </td>
 <td class="center-right">
-1</td>
+0</td>
 </tr>
 </tbody>
 </table>
