--- a/page2.html
+++ b/page2.html
@@ -431,7 +431,7 @@ Hiscores
 27
 </td>
 <td class="center">
-<a href="hiscorepersonal0d0a.html?user1=Lynx%a0Titan">GIM Retro S</a>
+<a href="https://collectionlog.net/log/GIM%20Retro%20S/All%20Pets">GIM Retro S</a>
 </td>
 <td class="center">
 420/1527</td>
@@ -445,7 +445,7 @@ Hiscores
 28
 </td>
 <td class="center">
-<a href="https://collectionlog.net/log/PipPipDiddly/All%20Pets">Iron Speesh</a>
+<a href="https://collectionlog.net/log/Iron%20Speesh/All%20Pets">Iron Speesh</a>
 </td>
 <td class="center">418/1527
 </td>
@@ -460,7 +460,7 @@ NEW
 29
 </td>
 <td class="center">
-<a href="hiscorepersonale8ec.html?user1=senZe">RogueLegends</a>
+<a href="https://collectionlog.net/log/RogueLegends/All%20Pets">RogueLegends</a>
 </td>
 <td class="center">
 407/1521</td>
@@ -475,7 +475,7 @@ NEW
 30
 </td>
 <td class="center">
-<a href="hiscorepersonal33d8.html?user1=Hey%a0Jase">Iron Hatred</a>
+<a href="https://collectionlog.net/log/Iron%20Hatred/All%20Pets">Iron Hatred</a>
 </td>
 <td class="center">406/1527
 </td>
@@ -490,7 +490,7 @@ NEW
 31
 </td>
 <td class="center">
-<a href="hiscorepersonalf6ce.html?user1=ShawnBay">skadyyyy</a>
+<a href="https://collectionlog.net/log/skadyyyy/All%20Pets">skadyyyy</a>
 </td>
 <td class="center">388/1527
 </td>
@@ -505,7 +505,7 @@ NEW
 32
 </td>
 <td class="center">
-<a href="hiscorepersonalce24.html?user1=Tomdabom">Pi Guy</a>
+<a href="https://collectionlog.net/log/Pi%20Guy/All%20Pets">Pi Guy</a>
 </td>
 <td class="center">375/1527
 </td>
@@ -520,7 +520,7 @@ NEW
 33
 </td>
 <td class="center">
-<a href="hiscorepersonal9eda.html?user1=Karma">Mastiga</a>
+<a href="https://collectionlog.net/log/Mastiga/All%20Pets">Mastiga</a>
 </td>
 <td class="center">375/1527
 </td>
@@ -535,7 +535,7 @@ NEW
 34
 </td>
 <td class="center">
-<a href="hiscorepersonal945d.html?user1=DedWilson">whitefang465</a>
+<a href="https://collectionlog.net/log/whitefang465/All%20Pets">whitefang465</a>
 </td>
 <td class="center">372/1527
 </td>
@@ -550,7 +550,7 @@ NEW
 35
 </td>
 <td class="center">
-<a href="hiscorepersonal208c.html?user1=harmony">CG IS TRASH</a>
+<a href="https://collectionlog.net/log/CG%20IS%20TRASH/All%20Pets">CG IS TRASH</a>
 </td>
 <td class="center">369/1527
 </td>
@@ -565,7 +565,7 @@ NEW
 36
 </td>
 <td class="center">
-<a href="hiscorepersonal3a1d.html?user1=GodTormentor">Tarded Donk</a>
+<a href="https://collectionlog.net/log/Tarded%20Donk/All%20Pets">Tarded Donk</a>
 </td>
 <td class="center">349/1527
 </td>
@@ -580,7 +580,7 @@ NEW
 37
 </td>
 <td class="center">
-<a href="hiscorepersonalc9c2.html?user1=Vinny">Preau</a>
+<a href="https://collectionlog.net/log/Preau/All%20Pets">Preau</a>
 </td>
 <td class="center">333/1527
 </td>
@@ -595,7 +595,7 @@ NEW
 38
 </td>
 <td class="center">
-<a href="hiscorepersonalbfc7.html?user1=borsi">IM Silo</a>
+<a href="https://collectionlog.net/log/IM%20Silo/All%20Pets">IM Silo</a>
 </td>
 <td class="center">328/1527
 </td>
@@ -610,7 +610,7 @@ NEW
 39
 </td>
 <td class="center">
-<a href="hiscorepersonalaa47.html?user1=Aziz">Whipyyy</a>
+<a href="https://collectionlog.net/log/Whipyyy/All%20Pets">Whipyyy</a>
 </td>
 <td class="center">327/1527
 </td>
@@ -625,7 +625,7 @@ NEW
 40
 </td>
 <td class="center">
-<a href="hiscorepersonal8eb7.html?user1=Brundeen">IronFiddler</a>
+<a href="https://collectionlog.net/log/IronFiddler/All%20Pets">IronFiddler</a>
 </td>
 <td class="center">323/1527
 </td>
@@ -670,7 +670,7 @@ NEW
 43
 </td>
 <td class="center">
-<a href="hiscorepersonale1fa.html?user1=Eeli">Im Furyous</a>
+<a href="https://collectionlog.net/log/Im%20Furyous/All%20Pets">Im Furyous</a>
 </td>
 <td class="center">305/1527
 </td>
@@ -700,7 +700,7 @@ NEW
 45
 </td>
 <td class="center">
-<a href="hiscorepersonal8180.html?user1=baile%a0y">NotArnr</a>
+<a href="https://collectionlog.net/log/NotArnr/All%20Pets">NotArnr</a>
 </td>
 <td class="center">301/1527
 </td>
@@ -715,7 +715,7 @@ NEW
 46
 </td>
 <td class="center">
-<a href="hiscorepersonal91b4.html?user1=Hiddy">V1dd</a>
+<a href="https://collectionlog.net/log/V1dd/All%20Pets">V1dd</a>
 </td>
 <td class="center">301/1527
 </td>
@@ -730,7 +730,7 @@ NEW
 47
 </td>
 <td class="center">
-<a href="hiscorepersonal0468.html?user1=blind%a0idiot">Vngdx</a>
+<a href="https://collectionlog.net/log/Vngdx/All%20Pets">Vngdx</a>
 </td>
 <td class="center">300/1527
 </td>
@@ -745,7 +745,7 @@ NEW
 48
 </td>
 <td class="center">
-<a href="hiscorepersonal9a4c.html?user1=Dumbfounded">kerry catona</a>
+<a href="https://collectionlog.net/log/kerry%20catona/All%20Pets">kerry catona</a>
 </td>
 <td class="center">295/1527
 </td>
@@ -760,7 +760,7 @@ NEW
 49
 </td>
 <td class="center">
-<a href="hiscorepersonal5e58.html?user1=he%20box%20jonge">I M Cloud</a>
+<a>I M Cloud</a>
 </td>
 <td class="center">284/1527
 </td>
@@ -775,7 +775,7 @@ NEW
 50
 </td>
 <td class="center">
-<a href="hiscorepersonaldfb6.html?user1=Dan%a0Gleesac">kciem</a>
+<a href="https://collectionlog.net/log/kciem/All%20Pets">kciem</a>
 </td>
 <td class="center">281/1527
 </td>
