--- a/page2.html
+++ b/page2.html
@@ -791,6 +791,9 @@ NEW
 <a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://mattzars.github.io/BapHeads/" title="Scroll up table">
 <img alt="Scroll Up" src="img/rsp777/hiscores/arrow_up.gif">
 </a>
+<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--down" href="https://mattzars.github.io/BapHeads/page3.html" title="Scroll down table">
+<img src="img/rsp777/hiscores/arrow_down.gif" alt="Scroll Down">
+</a>
 </nav>
 </div>
 </div>
