--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ NEW
 </tbody>
 </table>
 <nav class="personal-hiscores__pagination">
-<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--down" href="https://mattzars.github.io/BapHeads/page2.html" title="Scroll down table">
+<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--down" href="https://bapheads.github.io/Hiscores/page2.html" title="Scroll down table">
 <img src="img/rsp777/hiscores/arrow_down.gif" alt="Scroll Down" />
 </nav>
 </div>
