--- a/page2.html
+++ b/page2.html
@@ -788,10 +788,10 @@ NEW
 </tbody>
 </table>
 <nav class="personal-hiscores__pagination">
-<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://mattzars.github.io/BapHeads/" title="Scroll up table">
+<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://bapheads.github.io/Hiscores/" title="Scroll up table">
 <img alt="Scroll Up" src="img/rsp777/hiscores/arrow_up.gif">
 </a>
-<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--down" href="https://mattzars.github.io/BapHeads/page3.html" title="Scroll down table">
+<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--down" href="https://bapheads.github.io/Hiscores/page3.html" title="Scroll down table">
 <img src="img/rsp777/hiscores/arrow_down.gif" alt="Scroll Down">
 </a>
 </nav>
