--- a/page3.html
+++ b/page3.html
@@ -668,7 +668,7 @@ NEW
 </tbody>
 </table>
 <nav class="personal-hiscores__pagination">
-<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://mattzars.github.io/BapHeads/page2.html" title="Scroll up table">
+<a class="personal-hiscores__pagination-arrow personal-hiscores__pagination-arrow--up" href="https://bapheads.github.io/Hiscores/page2.html" title="Scroll up table">
 <img alt="Scroll Up" src="img/rsp777/hiscores/arrow_up.gif">
 </a>
 </nav>
