--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <meta name="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="https://www.runescape.com/img/global/favicon.ico" />
-<link rel="SHORTCUT ICON" href="https://www.runescape.com/img/global/favicon.ico" />
+<link rel="SHORTCUT ICON" href="img/global/favicon.ico" />
 <link rel="apple-touch-icon" href="img/global/mobile.png">
 <meta property="fb:app_id" content="174823375888281" />
 
-<meta property="og:title" content="Old School  Hiscores" />
+<meta property="og:title" content="Bap Head Hiscores" />
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Old School RuneScape" />
+<meta property="og:site_name" content="Bap Head" />
 <meta property="og:image" content="https://www.runescape.com/img/rsp777/social-share-fb.jpg?1" />
 <meta property="og:url" content="https://www.runescape.com" />
 <meta property="og:description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
