--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <meta name="keywords" content="MMORPG, free RPG games online, online multiplayer, role-playing, massively multiplayer games, mmo, RuneScape, Jagex" />
 <meta name="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
 
-<link rel="icon" type="image/vnd.microsoft.icon" href="https://www.runescape.com/img/global/favicon.ico" />
+<link rel="icon" type="image/vnd.microsoft.icon" href="img/global/favicon.ico" />
 <link rel="SHORTCUT ICON" href="img/global/favicon.ico" />
 <link rel="apple-touch-icon" href="img/global/mobile.png">
 <meta property="fb:app_id" content="174823375888281" />
