--- a/index.html
+++ b/index.html
@@ -40,21 +40,13 @@
 
 <meta property="og:title" content="Bap Head Hiscores" />
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Bap Head" />
-<meta property="og:image" content="https://www.runescape.com/img/rsp777/social-share-fb.jpg?1" />
-<meta property="og:url" content="https://www.runescape.com" />
-<meta property="og:description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
+<meta property="og:site_name" content="Bap Heads" />
+<meta property="og:image" content="img/rsp777/banner.gif" />
+<meta property="og:url" content="https://bapheads.github.io/Hiscores/" />
+<meta property="og:description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated space proudly displays the rare and valuable items our members have acquired in their Runescape adventures. Here, you will find a comprehensive ranking of our members based on their collection log achievements, offering a detailed look into the dedication and skill within our community." />
 <meta name="google-site-verification" content="RFtGg-G07XweT7nQe032HocvnRPhJAsdZqrq4NX_Op8">
 <meta itemprop="name" content="RuneScape">
-<meta itemprop="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure.">
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:domain" content="Oldschool.RuneScape.com">
-<meta name="twitter:url" content="https://www.runescape.com">
-<meta name="twitter:title" content="Old School  Hiscores">
-<meta name="twitter:description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure.">
-<meta name="twitter:image:src" content="https://www.runescape.com/img/rsp777/social-share.jpg?1">
-<meta name="twitter:site" content="@OldSchoolRS">
-<meta name='google-site-verification' content='pUwl5KYHKSZ6tbbgsR2wYNv1kbVmsYral3iFmijHTWM' />
+<meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated space proudly displays the rare and valuable items our members have acquired in their Runescape adventures. Here, you will find a comprehensive ranking of our members based on their collection log achievements, offering a detailed look into the dedication and skill within our community.">
 <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
 <style>
     
