--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script src="js/c/responsive/vendor-151.js" data-cookieconsent="ignore"></script>
 <title>Bap Head Hiscores</title>
 <meta name="keywords" content="MMORPG, free RPG games online, online multiplayer, role-playing, massively multiplayer games, mmo, RuneScape, Jagex" />
-<meta name="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
+<meta name="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday." />
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="img/global/favicon.ico" />
 <link rel="SHORTCUT ICON" href="img/global/favicon.ico" />
@@ -43,10 +43,10 @@
 <meta property="og:site_name" content="Bap Heads" />
 <meta property="og:image" content="img/rsp777/banner.gif" />
 <meta property="og:url" content="https://bapheads.github.io/Hiscores/" />
-<meta property="og:description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated space proudly displays the rare and valuable items our members have acquired in their Runescape adventures. Here, you will find a comprehensive ranking of our members based on their collection log achievements, offering a detailed look into the dedication and skill within our community." />
+<meta property="og:description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday." />
 <meta name="google-site-verification" content="RFtGg-G07XweT7nQe032HocvnRPhJAsdZqrq4NX_Op8">
 <meta itemprop="name" content="RuneScape">
-<meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated space proudly displays the rare and valuable items our members have acquired in their Runescape adventures. Here, you will find a comprehensive ranking of our members based on their collection log achievements, offering a detailed look into the dedication and skill within our community.">
+<meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday.">
 <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
 <style>
     
